--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@types/jest": "^24.0.18",
+    "js-sha256": "^0.9.0",
+    "js-sha512": "^0.8.0",
     "rxjs": "~6.4.0",
+    "sha.js": "^2.4.11",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
