--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@types/jest": "^24.0.18",
     "js-sha256": "^0.9.0",
     "js-sha512": "^0.8.0",
