--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/router": "~8.2.4",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@types/jest": "^24.0.18",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "js-sha256": "^0.9.0",
     "js-sha512": "^0.8.0",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "sha.js": "^2.4.11",
     "tslib": "^1.10.0",
