--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.4",
+    "@angular/animations": "^8.2.6",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
@@ -25,6 +25,7 @@
     "jquery": "^3.4.1",
     "js-sha256": "^0.9.0",
     "js-sha512": "^0.8.0",
+    "ngx-toastr": "^10.2.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "sha.js": "^2.4.11",
