--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.4",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@types/jest": "^24.0.18",
+    "big.js": "^5.2.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "js-sha256": "^0.9.0",
