--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.4.1",
     "js-sha256": "^0.9.0",
     "js-sha512": "^0.8.0",
+    "ngx-spinner": "^8.0.3",
     "ngx-toastr": "^10.2.0",
     "nodemon": "^1.19.3",
     "ol": "^5.3.3",
